@@ -1,3 +1,10 @@
+2003-05-27  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/icons.c (CreateIconWindow): 
+	(DrawIconWindow):
+	(GetIconBitmap):
+	Fixed loading of application supplied pixmap on 8/24 depth screen
+
 2003-05-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/focus.c (DoSetFocus):
